--- a/.gitconfig
+++ b/.gitconfig
@@ -2,28 +2,20 @@
 	email = lakemove@gmail.com
 	name = Jay
 [alias]
-	# View the SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph
-	# View the current working tree status using the short format
 	s = status -s
-	# Show the diff between the latest commit and the current state
 	d = !"git diff-index --quiet HEAD -- || clear; git diff --patch-with-stat"
-	# `git di $number` shows the diff between the state `$number` revisions ago and the current state
-	di = !"d() { git diff --patch-with-stat HEAD~$1; }; git diff-index --quiet HEAD -- || clear; d"
-	# Pull in remote changes for the current repository and all its submodules
-	p = !"git pull; git submodule foreach git pull origin master"
-	# Clone a repository including all submodules
-	c = clone --recursive
-	# Commit all changes
 	ca = !git add -A && git commit -av
-	# Switch to a branch, creating it if necessary
-	go = checkout -B
+	go = !"git branch -v | rofi -dmenu | cut -c3- | awk '{print $1}' | xargs git checkout"
 	tags = tag -l
 	branches = branch -a
 	remotes = remote -v
-	# Interactive rebase with the given number of latest commits
 	reb = "!r() { git rebase -i HEAD~$1; }; r"
 [push]
-	default = matching 
+	default = upstream
 [pull]
 	ff = only
+[log]
+	date = iso
+[diff]
+	tool = vimdiff
